fixed bootstrap inputs alignement

--- a/client/modules/User/components/UserRegistrationForm/UserRegistrationForm.css
+++ b/client/modules/User/components/UserRegistrationForm/UserRegistrationForm.css
@@ -31,3 +31,8 @@ a:hover {
 .title{
   margin-bottom:.5em;
 }
+
+label, input{
+  vertical-align:middle;
+  width:50%;
+}
